samples/_failures_safe/1761653206_0b2a21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e349a9c.c: In function ‘process_compression_operation’:
./samples/SAFE/__tmp_4e349a9c.c:145:9: error: expected declaration or statement at end of input
  145 |         } else {
      |         ^
./samples/SAFE/__tmp_4e349a9c.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e349a9c.c:145:9: error: expected declaration or statement at end of input
